--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -258,6 +258,9 @@ on post-fs-data
     import /init.slim.rc
 
 on boot
+    # Run sysinit
+    start sysinit
+
 # basic network init
     ifup lo
     hostname localhost
@@ -533,4 +536,8 @@ service mdnsd /system/bin/mdnsd
     group inet net_raw
     socket mdnsd stream 0660 mdnsr inet
     disabled
+    oneshot
+
+service sysinit /system/bin/sysinit
+    user root
     oneshot
